--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "chartjs-adapter-luxon": "^1.3.1",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "socket.io-client": "^4.7.4"
