--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
