--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,6 +3,7 @@
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
+    "allowJs": true,
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true
