--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_playground",
+  "name": "stock_player",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,15 +7,16 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "chartjs-adapter-luxon": "^1.3.1",
+    "jest-environment-jsdom": "^29.7.0",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -26,6 +27,11 @@
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
@@ -35,6 +41,8 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
